--- a/style.css
+++ b/style.css
@@ -46,16 +46,7 @@
   background-position: center;
   background-size: cover;
   position: relative;
-}
-
-.header {
-  min-height: 40vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(/images/banner.png);
-  background-position: center;
-  background-size: cover;
-  position: relative;
+  padding-bottom: 50px;
 }
 
 nav {
@@ -98,7 +89,7 @@ nav img {
 
 .statement {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 36px;
+  font-size: 48px;
   font-weight: extra-bold;
   margin-right: 100px;
   margin-left: 100px;
@@ -128,6 +119,66 @@ nav img {
 }
 
 .content h2 {
+  font-size: 36px;
+  font-weight: extra-bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-align: center;
+  padding: 32px;
+}
+
+.column {
+  display: flex;
+  float: left;
+  width: 25%;
+  justify-content: center;
+  margin-left: 100px;
+}
+
+.column img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.row {
+    margin-bottom: 100px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  display: flex;
+  align-items: center;
+  float: left;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 6px;
+  text-align: center;
+  background-color: #e5e5e5;
+  position: relative;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+/* QUOTE */
+.quote {
+    padding: 125px;
+    display: flex;
     text-align: center;
-    padding: 32px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: #1f2973;
+}
+
+#quote {
+    width:600px;
+    margin: 0 auto;
 }
