--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   font-size: 16px;
   font-weight: 700;
   color: white;
-  border: 3px solid rgb(252, 70, 100);
+  border: 3px solid #fc4564;
   cursor: pointer;
   position: relative;
   background-color: transparent;
@@ -181,4 +181,42 @@ nav img {
 #quote {
     width:600px;
     margin: 0 auto;
+}
+
+/* FOOTER */
+footer {
+  background: #fc4564;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  margin-right: 150px;
+  margin-left: 150px;
+  border-radius: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
+}
+
+footer .text {
+  padding: 40px;
+  color: black;
+  display: inline-block;
+}
+
+.footer__content {
+  margin-left: 200px;
+}
+
+#btn_footer {
+  align-items: center;
+  display: inline-block;
+  padding: 0.5rem 1.2rem;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  border: 4px solid black;
+  cursor: pointer;
+  background-color: transparent;
+  text-decoration: none;
+  overflow: hidden;
+  z-index: 1;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
